--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
 
   <div class="top-container">
-    <img class="top_cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top_cloud" src="cloud.png" alt="cloud-img">
     <h1 class="h">My Personal Web Site</h1>
     <h2 class="p">Will Be Very Cool Site</h2>
-    <img class="bottom_cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-png">
+    <img class="bottom_cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-png">
   </div>
 
   <div class="middle-container">
@@ -29,12 +29,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="cpp" src="images/c-.png" alt="">
+        <img class="cpp" src="c-.png" alt="">
         <h3>Lorem & Ipsum</h3>
         <p class="skill-p1">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <div class="skill-row">
-        <img class="code" src="images/binary-code.png" alt="">
+        <img class="code" src="binary-code.png" alt="">
         <h3>Lorem Ipsum Dolor</h3>
         <p class="skill-p2">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
